@@ -3,6 +3,8 @@ What's New in IDLE 1.2c1?
 
 *Release date: XX-AUG-2006*
 
+- ToggleTab dialog was setting indent to 8 even if cancelled (since 1.2a1).
+
 - When used w/o subprocess, all exceptions were preceded by an error
   message claiming they were IDLE internal errors (since 1.2a1).
 
